<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="bottom"
    android:background="@color/white"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
	    android:layout_marginTop="22dp">
	    <TextView 
	        android:id="@+id/traffic_comment"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="22dp"
	        android:layout_marginRight="11dp"
	        android:textColor="@color/gray"
	        android:layout_weight="1"
	        android:text="@string/traffic_comment"/>
	    <Button 
	        android:id="@+id/reload_traffic_info"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:layout_marginRight="22dp"
	        style="@style/SimpleButton"
	        android:text="@string/reload_traffic_info"/>
	</LinearLayout>
    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical">
    <LinearLayout 
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:layout_marginLeft="22dp">
          
	    <LinearLayout 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        <ImageView
		        android:id="@+id/busstop"
		        android:layout_width="20dp"
		        android:layout_height="52dp"
		        android:src="@drawable/busstop" />
		    <TextView 
		        android:id="@+id/three_before_label"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/black"
		        android:layout_gravity="center_vertical"
		        android:layout_marginLeft="22dp"
		        android:textSize="22sp"
		        android:text="@string/three_before"/>
	    </LinearLayout>
		<TextView 
	        android:id="@+id/threeBefore"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
          android:layout_marginLeft="44dp"/>
	</LinearLayout>
	
   	<LinearLayout 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="vertical"
	    	android:layout_marginLeft="22dp">
	    <LinearLayout 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        
	        <ImageView
		        android:id="@+id/busstop"
		        android:layout_width="20dp"
		        android:layout_height="52dp"
		        android:src="@drawable/busstop" />
		    <TextView 
		        android:id="@+id/two_before_label"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/black"
		        android:layout_gravity="center_vertical"
		        android:layout_marginLeft="22dp"
		        android:textSize="22sp"
		        android:text="@string/two_before"/>
	    </LinearLayout>
	    <TextView 
	        android:id="@+id/twoBefore"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
		    android:layout_marginLeft="44dp"/>
    </LinearLayout>

	<LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
		    android:layout_marginLeft="22dp">
	    <LinearLayout 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
		        <ImageView
			        android:id="@+id/busstop"
			        android:layout_width="20dp"
			        android:layout_height="52dp"
			        android:src="@drawable/busstop" />
			    <TextView 
			        android:id="@+id/one_before_label"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textColor="@color/black"
			        android:layout_gravity="center_vertical"
		        	android:layout_marginLeft="22dp"
			        android:textSize="22sp"
			        android:text="@string/one_before"/>
	    </LinearLayout>
		<TextView 
	        android:id="@+id/oneBefore"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
		    android:layout_marginLeft="44dp"/>
    </LinearLayout>
    
	<LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
		    android:layout_marginLeft="22dp">
	    <LinearLayout 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        
	        <ImageView
		        android:id="@+id/busstop"
		        android:layout_width="20dp"
		        android:layout_height="52dp"
		        android:src="@drawable/busstop" />
		    <TextView 
		        android:id="@+id/rideBusStop"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/black"
		        android:layout_gravity="center_vertical"
		        android:layout_marginLeft="22dp"
		        android:textSize="22sp"
		        android:text="@string/just_now"/>
	    </LinearLayout>
    </LinearLayout>
    
    </LinearLayout>
    </ScrollView>
</LinearLayout>